--- a/DocsVision_Test-master/Registration/Registrstion.WinForms/Forms/SingUpForm.resx
+++ b/DocsVision_Test-master/Registration/Registrstion.WinForms/Forms/SingUpForm.resx
@@ -130,10 +130,10 @@
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="singUpB.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
+    <value>2</value>
   </data>
   <data name="singUpB.Text" xml:space="preserve">
-    <value>Sing up</value>
+    <value>&amp;Sing up</value>
   </data>
   <data name="&gt;&gt;singUpB.Name" xml:space="preserve">
     <value>singUpB</value>
@@ -157,10 +157,10 @@
     <value>75, 23</value>
   </data>
   <data name="cancelB.TabIndex" type="System.Int32, mscorlib">
-    <value>2</value>
+    <value>3</value>
   </data>
   <data name="cancelB.Text" xml:space="preserve">
-    <value>Cancel</value>
+    <value>&amp;Cancel</value>
   </data>
   <data name="&gt;&gt;cancelB.Name" xml:space="preserve">
     <value>cancelB</value>
@@ -190,13 +190,13 @@
     <value>194, 116</value>
   </data>
   <data name="singUpControl1.TabIndex" type="System.Int32, mscorlib">
-    <value>3</value>
+    <value>1</value>
   </data>
   <data name="&gt;&gt;singUpControl1.Name" xml:space="preserve">
     <value>singUpControl1</value>
   </data>
   <data name="&gt;&gt;singUpControl1.Type" xml:space="preserve">
-    <value>Registrstion.WinForms.Controlers.SingUpControl, Registrstion.WinForms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+    <value>Registration.WinForms.Controlers.SingUpControl, Registrstion.WinForms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;singUpControl1.Parent" xml:space="preserve">
     <value>$this</value>
